--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Job Application Form</h1>
-    <form method="POST" action="your-action-url">
+    <form method="POST" action="your-action-url"> <!-- Yahan action URL daalna hoga -->
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br><br>
 
